<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_base"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_search" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.everlog.ui.views.EmptyView
                android:id="@+id/emptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:evActionText="@string/exercises_empty_action"
                app:evImage="@drawable/ic_barbell"
                app:evSubtitle="@string/exercises_empty_subtitle"
                app:evTitle="@string/exercises_empty_title"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/footer_bottom_padding_double"
                tools:itemCount="3"
                tools:listitem="@layout/row_exercise" />

            <include layout="@layout/shimmer_exercises" />
        </FrameLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="gone"
        tools:visibility="visible">

        <com.github.mmin18.widget.RealtimeBlurView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:realtimeBlurRadius="20dp"
            app:realtimeOverlayColor="@color/background_blur" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/activity_margin">

            <Button
                android:id="@+id/linkBtn"
                style="@style/Button.Three"
                android:layout_width="0dp"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_weight="1"
                android:text="@string/exercises_link" />

            <Button
                android:id="@+id/addBtn"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/exercises_add" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>