<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginContentWidth"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="@dimen/activity_margin"
    android:layout_marginRight="@dimen/activity_margin"
    tools:background="@color/background_base">

    <LinearLayout
        android:id="@+id/brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/showRegisterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_login_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/login_title"
            android:textColor="@color/white_base"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:gravity="center"
            android:text="@string/login_tagline"
            android:textColor="@color/white_base"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/showRegisterBtn"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginBottom="@dimen/activity_margin"
        android:background="@drawable/rounded_corners_btn_one"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/login_get_started"
        app:initialCornerAngle="21dp"
        app:layout_constraintBottom_toTopOf="@id/showLoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="@color/background_base"
        app:spinning_bar_padding="8dp" />

    <Button
        android:id="@+id/showLoginBtn"
        style="@style/Button.Three"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginBottom="@dimen/margin_20"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/login_existing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
